updating and correcting spacing in html. about us

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -217,7 +217,6 @@ button:hover {
 }
 .column1 {
     display: grid;
-    align-items: left;
 }
 
 .img-logo {
